fix(layout): fix issue with background on mobiles Closes #36

--- a/src/sass/theme/_layout.scss
+++ b/src/sass/theme/_layout.scss
@@ -33,7 +33,7 @@ body.mobile{
     background-attachment: inherit;
     background-color: $body-bg;
   }
-  &.blur-theme {
+  &.blur-theme .body-bg{
     @include main-background();
   }
 }
